--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Kontacts</string>
     <string name="contact_image">Contact Image</string>
+    <string name="refresh">Refresh</string>
 </resources>
