--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Kontacts</string>
     <string name="contact_image">Contact Image</string>
     <string name="refresh">Refresh</string>
+
+    <string name="title_activity_kontacts">KontactsActivity</string>
+    <string name="title_contacts">Contacts</string>
+    <string name="title_favourite">Favourite</string>
+    <string name="title_calls">Calls</string>
 </resources>
